<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group >
        <item
            android:id="@+id/btn_camera"
            android:icon="@drawable/ic_camera"
            android:title="@string/btn_camera"
            app:showAsAction="always" />
        <item
            android:id="@+id/btn_gallery"
            android:icon="@drawable/ic_gallery"
            android:title="@string/btn_gallery"
            app:showAsAction="always" />
    </group>

    <group>
        <item
            android:id="@+id/btn_rotate"
            android:icon="@drawable/ic_rotate_light"
            android:title="@string/btn_rotate"
            app:showAsAction="ifRoom|collapseActionView" />
        <item
            android:id="@+id/btn_clip"
            android:icon="@drawable/ic_clip_light"
            android:title="@string/btn_clip"
            app:showAsAction="ifRoom|collapseActionView" />
    </group>
</menu>